# cuda_gravbox

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  REFACTORING_CHECKLIST.md  REFACTORING_SUMMARY.md  cuda_gravbox.sln
cuda_gravbox/: cuda_gravbox.vcxproj  imgui.ini  kernel.cu
cuda_gravbox/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Config.h  CpuPhysicsEngine.cpp  CpuPhysicsEngine.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsKernels.cu  Renderer.cpp  Renderer.h  kernel.cu  main.cpp  particle.h  shader.h  shadersSourceCode.h  simulation.cu
cuda_gravbox/src/old/: main.cpp.old
cuda_gravbox/src/shaders/: particle.frag  particle.vert
